objects/BRNSHRK__Brainshark_Coaching_Review__c.object
<CustomObject>
    <fields>
        <fullName>BRNSHRK__CoachingActivityCommentId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Coaching Activity Comment Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Invitation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invitation</label>
        <referenceTo>BRNSHRK__Brainshark_Coaching_Invitation__c</referenceTo>
        <relationshipLabel>Brainshark Coaching Reviews</relationshipLabel>
        <relationshipName>Brainshark_Coaching_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__OverallScore__c</fullName>
        <label>Overall Score</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ReviewDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Brainshark_Coaching_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__review_number__c</fullName>
        <label>Review Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Brainshark Coaching Review</label>
    <nameField>
        <displayFormat>BCR-{00000}</displayFormat>
        <label>Brainshark Coaching Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brainshark Coaching Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>